Left aligned text and added some padding to fix aesthetics

--- a/_sass/_summit.scss
+++ b/_sass/_summit.scss
@@ -135,6 +135,12 @@
   margin: 4rem 4rem 2rem 4rem; 
 }
 
+#location .schedule-text {
+  text-align: left;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
 #location .text {
   color: #000;
 }
